------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Jun-2010 Mark Dexter
# Fix failing system test

27-Jun-2010 Mark Dexter
# Fix failing system tests from [#20372] toggle name change

26-Jun-2010 Ian MacLennan
+ Added JInstaller test
# Improved JError handling in JoomlaTestCase

25-Jun-2010 Mark Dexter
# Fix failing JForm test in Windows (hard-coded '/')
# Fix failing JFilterOutputTest (when running stand-alone)

24-Jun-2010 Ian MacLennan
# Fixed intermittently failing unit test
# Added some JInstaller unit tests

23-Jun-2010 Ian MacLennan
+ Added unit tests for JAdapter, JAdapterInstance and one for JObject
# Fixed unit tests that were breaking because mocks were not getting properly injected
# Fixed JCache unit tests to supply storage handler to accomodate behaviour change (thanks Klas)

22-Jun-2010 Mark Dexter
# Added test fixes for failing system tests on Hudson server

22-Jun-2010 Ian MacLennan
 # Added unit tests for JDocument

20-Jun-2010 Mark Dexter
# [#20735] JMailHelper unit tests

19-Jun-2010 Mark Dexter
+ New system test featured0002test to test ordering down columns
+ New methods in SeleniumJoomlaTestCase for toggling featured and published in Article Manager

12-Jun-2010 Mark Dexter
# Fix failing featured0001Test

08-Jun-2010 Mark Dexter
^ Refactor methods in SeleniumJoomlaTestCase (Matt Thomas)
# Fix system test errors
^ Refactor menu0001Test to remove sleep statements

07-Jun-2010 Sam Moffatt
 # Fixed incorrect metadata in package sample

07-Jun-2010 Mark Dexter
+ New system test for featured blog ordering
# Clean up doc blocks for system tests 

04-Jun-2010 Mark Dexter
^ Improvements to SeleniumJoomlaTestCase. (Matt Thomas)

30-May-2010 Mark Dexter