@@ -20,7 +20,7 @@ class JInstallerTest extends JoomlaTestCase
 	 */
 	protected function setUp()
 	{
-
+		parent::setUp();
 	}
 
 	/**
@@ -158,29 +158,196 @@ class JInstallerTest extends JoomlaTestCase
 	}
 
 	/**
-	 * @todo Implement testPushStep().
+	 * @todo Implement testAbort().
 	 */
-	public function testPushStep()
+	public function testAbortFile()
 	{
+		copy(JPATH_BASE.'/tests/_data/installer_packages/com_alpha/com_alpha.jpg', dirname(__FILE__).'/tmp/com_alpha.jpg');
+
 		$this->object = JInstaller::getInstance();
-		$this->object->pushStep(array('type' => 'extension', 'id' => 5));
+		$this->object->pushStep(array('type' => 'file', 'path' => dirname(__FILE__).'/tmp/com_alpha.jpg'));
+
 
 		$this->assertThat(
-			$this->readAttribute($this->object, '_stepStack'),
-			$this->equalTo(array(array('type' => 'extension', 'id' => 5)))
+			$this->object->abort(),
+			$this->isTrue()
 		);
+
+		$this->assertThat(
+			file_exists(dirname(__FILE__).'/tmp/com_alpha.jpg'),
+			$this->isFalse()
+		);
+
 	}
 
 	/**
 	 * @todo Implement testAbort().
 	 */
-	public function testAbort()
+	public function testAbortFolder()
 	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete(
-		'This test has not been implemented yet.'
+		JFolder::copy(JPATH_BASE.'/tests/_data/installer_packages/com_alpha/language/en-GB', dirname(__FILE__).'/tmp/en-GB');
+
+		$this->object = JInstaller::getInstance();
+		$this->object->pushStep(array('type' => 'folder', 'path' => dirname(__FILE__).'/tmp/en-GB'));
+
+
+		$this->assertThat(
+			$this->object->abort(),
+			$this->isTrue()
 		);
+
+		$this->assertThat(
+			file_exists(dirname(__FILE__).'/tmp/en-GB'),
+			$this->isFalse()
+		);
+
 	}
+
+
+	/**
+	 * @todo Implement testAbort().
+	 */
+	public function testAbortQuery()
+	{
+		$this->object = JInstaller::getInstance();
+		$this->object->pushStep(array('type' => 'query'));
+
+
+		$this->assertThat(
+			$this->object->abort(),
+			$this->isTrue()
+		);
+
+	}
+
+
+	/**
+	 * @todo Implement testAbort().
+	 */
+	public function testAbortExtension()
+	{
+		$this->saveFactoryState();
+
+		$newDbo = $this->getMock('test', array('setQuery', 'query'));
+
+		$newDbo->expects($this->once())
+			->method('setQuery')
+			->with($this->equalTo('DELETE FROM `#__extensions` WHERE extension_id = 3'));
+
+		$newDbo->expects($this->once())
+			->method('Query')
+			->with()
+			->will($this->returnValue(true));
+
+		JFactory::$database = &$newDbo;
+
+		//$this->object = JInstaller::getInstance();
+		$this->object = new JInstaller;
+		$this->object->pushStep(array('type' => 'extension', 'id' => 3));
+
+		$this->assertThat(
+			$this->object->abort(),
+			$this->isTrue()
+		);
+
+		$this->restoreFactoryState();
+
+
+	}
+
+
+	/**
+	 * @todo Implement testAbort().
+	 */
+	public function testAbortDefault()
+	{
+		$adapterMock = $this->getMock('test', array('_rollback_testtype'));
+
+		$adapterMock->expects($this->once())
+			->method('_rollback_testtype')
+			->with($this->equalTo(array('type' => 'testtype')))
+			->will($this->returnValue(true));
+
+
+		//$this->object = JInstaller::getInstance();
+		$this->object = new JInstaller;
+
+		$this->object->setAdapter('testadapter', $adapterMock);
+
+		$this->object->pushStep(array('type' => 'testtype'));
+
+		$this->assertThat(
+			$this->object->abort(null, 'testadapter'),
+			$this->isTrue()
+		);
+
+	}
+
+	/**
+	 * Test that an abort message results in a raised warning
+	 */
+	public function testAbortMsg()
+	{
+		//$this->object = JInstaller::getInstance();
+		$this->object = new JInstaller;
+
+		$this->setExpectedError(array('code' => 100, 'message' => 'Warning Text'));
+
+		$this->assertThat(
+			$this->object->abort('Warning Text'),
+			$this->isTrue()
+		);
+
+	}
+
+
+	/**
+	 * Test that if the type is not good we fall back properly
+	 */
+	public function testAbortBadType()
+	{
+		//$this->object = JInstaller::getInstance();
+		$this->object = new JInstaller;
+
+		$this->object->pushStep(array('type' => 'badstep'));
+
+		$this->assertThat(
+			$this->object->abort(null, false),
+			$this->isFalse()
+		);
+
+	}
+
+
+	/**
+	 * This test is weak and may need removal at some point
+	 */
+	public function testAbortDebug()
+	{
+
+		$configMock = $this->getMock('test', array('get'));
+
+		$configMock->expects($this->atLeastOnce())
+			->method('get')
+			->will($this->returnValue(true));
+
+		$this->setExpectedError(array('code' => 500));
+
+		//$this->object = JInstaller::getInstance();
+		$this->object = new JInstaller;
+
+		$this->saveFactoryState();
+		JFactory::$config = $configMock;
+
+		$this->assertThat(
+			$this->object->abort(),
+			$this->isTrue()
+		);
+
+		$this->restoreFactoryState();
+
+	}
+
 
 	/**
 	 * @todo Implement testInstall().
